# libmarad

./: .gitignore  Makefile.am  README  configure.ac  marad.pc.in
lib/: Makefile.am  marad.c  marad.h
man/: Makefile.am  marad.3
